# ScProjects

./: CMakeLists.txt  README.md
cmake/: projects.cmake  projects_common.cmake  projects_detect_platform.cmake  projects_ide.cmake  projects_initialize.cmake  projects_utilities.cmake
docs/: 信号分析软件.xmind
src/ScSignalAnalysis/: CMakeLists.txt
src/ScSignalAnalysis/CommSrc/cmake/: scsa_project_common.cmake  scsa_projects_initialize.cmake
src/ScSignalAnalysis/CommSrc/core/: CMakeLists.txt
src/ScSignalAnalysis/CommSrc/core/format/: scsignalformat.h  scwaveformat.cpp  scwaveformat.h
src/ScSignalAnalysis/CommSrc/service/: CMakeLists.txt
src/ScSignalAnalysis/CommSrc/service/runnables/: scrunnablemanager.cpp  scrunnablemanager.h
src/ScSignalAnalysis/Server/ScServer/: CMakeLists.txt
src/ScSignalAnalysis/Server/ScServer/src/: main.cpp
